# carnix

./: Cargo.nix  Cargo.toml  README.md  crates-io.list  crates-io.nix  default.nix
src/: cache.rs  cargo-generate-nixfile.rs  cfg.rs  error.rs  krate.rs  main.rs  output.rs  prefetch.rs
